added integration tests for user and jobPost service